// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders Correctly - Desktop 1`] = `
<header
  class="w-full h-12 select-none"
  id="menu"
>
  <h1
    class="inline-block w-full h-12 text-4xl text-center leading-12 md:text-35xl md:w-auto font-heading text-main md:mx-8"
  >
    <router-link-stub
      to="/"
    >
      Munro
    </router-link-stub>
  </h1>
   
  <svg
    class="absolute right-0 z-20 inline-block float-right h-12 p-2 mr-2 text-main md:hidden"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
  >
    <path
      d="M4 6h16M4 12h16M4 18h16"
    />
  </svg>
   
  <nav
    class="relative z-50 flex flex-col justify-center w-full mt-12 text-lg font-normal bg-white text-main h-screen--12 md:mr-2 md:h-12 md:float-right -top-12 md:top-0 md:bg-transparent align-center md:w-auto md:inline-block md:mt-0"
    name="shrink"
  >
    <router-link-stub
      class="menu-item"
      to="/leagues"
    >
      Leagues
    </router-link-stub>
     
    <router-link-stub
      class="menu-item"
      to="/latest-results"
    >
      Latest Results
    </router-link-stub>
     
    <router-link-stub
      class="menu-item"
      to="/upload"
    >
      Upload Results
    </router-link-stub>
     
    <!---->
  </nav>
</header>
`;

exports[`Renders Correctly - Desktop 2`] = `
<header
  class="w-full h-12 select-none"
  id="menu"
>
  <h1
    class="inline-block w-full h-12 text-4xl text-center leading-12 md:text-35xl md:w-auto font-heading text-main md:mx-8"
  >
    <router-link-stub
      to="/"
    >
      Munro
    </router-link-stub>
  </h1>
   
  <svg
    class="absolute right-0 z-20 inline-block float-right h-12 p-2 mr-2 text-main md:hidden"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
  >
    <path
      d="M4 6h16M4 12h16M4 18h16"
    />
  </svg>
   
  <nav
    class="relative z-50 flex flex-col justify-center w-full mt-12 text-lg font-normal bg-white text-main h-screen--12 md:mr-2 md:h-12 md:float-right -top-12 md:top-0 md:bg-transparent align-center md:w-auto md:inline-block md:mt-0"
    name="shrink"
  >
    <router-link-stub
      class="menu-item"
      to="/leagues"
    >
      Leagues
    </router-link-stub>
     
    <router-link-stub
      class="menu-item"
      to="/latest-results"
    >
      Latest Results
    </router-link-stub>
     
    <router-link-stub
      class="menu-item"
      to="/upload"
    >
      Upload Results
    </router-link-stub>
     
    <!---->
  </nav>
</header>
`;

exports[`Renders Correctly - Mobile 1`] = `
<header
  class="w-full h-12 select-none"
  id="menu"
>
  <h1
    class="inline-block w-full h-12 text-4xl text-center leading-12 md:text-35xl md:w-auto font-heading text-main md:mx-8"
  >
    <router-link-stub
      to="/"
    >
      Munro
    </router-link-stub>
  </h1>
   
  <svg
    class="absolute right-0 z-20 inline-block float-right h-12 p-2 mr-2 text-main md:hidden"
    fill="none"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
  >
    <path
      d="M4 6h16M4 12h16M4 18h16"
    />
  </svg>
   
  <nav
    class="relative z-50 flex flex-col justify-center w-full mt-12 text-lg font-normal bg-white text-main h-screen--12 md:mr-2 md:h-12 md:float-right -top-12 md:top-0 md:bg-transparent align-center md:w-auto md:inline-block md:mt-0 smallWindow"
    name="shrink"
    style="display: none;"
  >
    <router-link-stub
      class="menu-item"
      to="/leagues"
    >
      Leagues
    </router-link-stub>
     
    <router-link-stub
      class="menu-item"
      to="/latest-results"
    >
      Latest Results
    </router-link-stub>
     
    <router-link-stub
      class="menu-item"
      to="/upload"
    >
      Upload Results
    </router-link-stub>
     
    <!---->
  </nav>
</header>
`;
